# UCSC-CSE123-S25

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  assorted_ideas.md  root.crt
aws_snippets/: create_device.py  example_backup.json  example_backup_event.json  example_backup_habit.json  example_backup_task.json  example_publish.json  example_refresh.json  example_response_habitentry.json  example_response_task.json  example_update.json  example_update_event.json  example_update_habitentry.json  example_update_task.json  lambda_refresh.py  lambda_update.py  readme.md
aws_snippets/create_device/: create_device.py
aws_snippets/paho_client/: paho_client.py
caddy/: Caddyfile  Dockerfile
doc/: Website  pdf.mk
doc/asgn1/: Makefile  assignment_1.md
doc/asgn2/: Makefile  assignment_2.md
doc/asgn3/: Makefile  assignment_3.md
doc/common/: Abstract  Ethics_Statment.md  Finalized_Specs.md  Morphology_Table.md  abstract.md  akanksha_review.md  bibliography.md  brainstorm.md  brainstorm_prez.md  cloud_design.md  configurable_settings.md  decision_table.md  decision_table.ods  demo_procedure.md  demo_script  design_for_manufacture_and_assembly.md  design_objective.md  design_objective.tex  design_objective_table.md  design_objective_table.tex  design_objectives.md  device_component_design.md  device_design.md  device_statemachine.md  device_ui_requirements.md  entry_design.md  ethics_statement.md  executive_summary.md  existing_designs.md  featureTable.tex  gantt.md  goal_statement.md  goal_statement.tex  isabella_review.md  lennan_review.md  life_cycle_assessment.md  (+20 more)
esp/: CMakeLists.txt  sdkconfig.defaults
esp-tentative-name/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp-tentative-name/components/UI_ili9488/main/: .main.c.swp  .ui.c.swp  CMakeLists.txt  display_init.h  helper_menus.c  helper_menus.h  idf_component.yml  main.c  ui.c  ui.h
esp-tentative-name/components/database/: CMakeLists.txt  CMakeLists.txt.old  Kconfig.projbuild  README.md
esp-tentative-name/components/database/include/: SQL.h  database.h  defs.h  event.h  habit.h  task.h
esp-tentative-name/components/database/old/: Logger.h  event.c  event.h
esp-tentative-name/components/database/old/tests/: SQLtests.c.old
esp-tentative-name/components/database/src/: DLL.c  DLL.h  EntryMan.c  EntryMan.h  GUIContent.c  GUIContent.h  GUITask.c  GUITask.h  Logger.c  Logger.h  SQL.c  SQL.h  database.c  defs.h  event.c  habit.c  main.c  main.h  task.c  task.h  task_demo.c
esp-tentative-name/components/database/tests/: SQLtests.c
esp-tentative-name/components/wifi_setup/: CMakeLists.txt  Kconfig.projbuild  readme.md  root.html  wifi_setup.c  wifi_setup.h
esp-tentative-name/components/wifi_setup/components/dns_server/: dns_server.c
esp-tentative-name/components/wifi_setup/test_apps/: CMakeLists.txt  sdkconfig.defaults
esp-tentative-name/components/wifi_setup/test_apps/main/: CMakeLists.txt
esp-tentative-name/main/: CMakeLists.txt  app_main.c  esp-tentative-name.c  intermediary.c  intermediary.h  main.c  sender.c  sender.h  wifi.h
esp/components/mqtt_conn/: CMakeLists.txt  mqtt_conn.c  mqtt_conn.h
esp/components/mqtt_conn/test_apps/: CMakeLists.txt  partitions.csv
esp/components/mqtt_conn/test_apps/main/: CMakeLists.txt  Kconfig.projbuild
esp/main/: CMakeLists.txt  app_main.c  main.c
flask/: .env  Dockerfile  app  app.py  aws_helper.py  requirements.txt
hardware/: Rust_Board.kicad_sym  cse123.kicad_sch  parts.kicad_sym  readme.md
meta/: readme.md
thirt_party/: gantt_patch.diff  readme.md
webserver/: Dockerfile  README.md  app.py  docker-compose.yml
(+196 files in other folders)
